HTML & CSS progress...Now to JS

--- a/index.html
+++ b/index.html
@@ -20,12 +20,95 @@ Need a timer
 Need a place to display 10 most recent completion times
 Reset button
 
+inspiration:
+     https://www.youtube.com/watch?v=ZniVgo8U7ek&t=1458s   this for the card flip. hadto modify alot to get it to work
+     https://www.youtube.com/watch?v=QGVXmoZWZuw     this for reference to  modify my flipCard function 
+     https://stackoverflow.com/questions/53894195/flip-animation-in-chrome-revealing-half-of-elements-from-inactive-side  used to fix the above ideas
+
 -->
-
-
-
-
 <body>
-    <h1>test</h1>
+    <header>Mario Matcher</header>
+   
+
+<div class="play-area">
+    <header class="stop-watch">00:00:00</header>
+    
+  <section class="memory-game">
+    <div class="memory-card">
+        <img src="Images/Mario.png" alt="Mario" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Mario.png" alt="Mario" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Bowser.png" alt="Bowser" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Bowser.png" alt="Bowser" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Goomba.png" alt="Goomba" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Goomba.png" alt="Goomba" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Luigi.png" alt="Luigi" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Luigi.png" alt="Luigi" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Princess Peach.png" alt="Princess" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Princess Peach.png" alt="Princess" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Toad.png" alt="Toad" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Toad.png" alt="Toad" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/mushroom.png" alt="mushroom" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/mushroom.png" alt="mushroom" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Yoshi.png" alt="Yoshi" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+    <div class="memory-card">
+        <img src="Images/Yoshi.png" alt="Yoshi" class="front-face">
+        <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
+    </div>
+  </section>
+  <footer class="game-times">
+    <ul>
+        <li>00:00:00</li>
+        <li>00:00:00</li>
+        <li>00:00:00</li>
+        <li>00:00:00</li>
+        <li>00:00:00</li>
+    </ul>
+  </footer>
+ 
+  </div>
 </body>
 </html>
