We have a timer

--- a/index.html
+++ b/index.html
@@ -31,70 +31,70 @@ inspiration:
    
 
 <div class="play-area">
-    <header class="stop-watch">00:00:00</header>
+    <header class="stop-watch">00:00</header>
     
   <section class="memory-game">
-    <div class="memory-card">
+    <div class="memory-card" id="mario">
         <img src="Images/Mario.png" alt="Mario" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="mario">
         <img src="Images/Mario.png" alt="Mario" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="bowser">
         <img src="Images/Bowser.png" alt="Bowser" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="bowser">
         <img src="Images/Bowser.png" alt="Bowser" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="goomba">
         <img src="Images/Goomba.png" alt="Goomba" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="goomba">
         <img src="Images/Goomba.png" alt="Goomba" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="luigi">
         <img src="Images/Luigi.png" alt="Luigi" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="luigi">
         <img src="Images/Luigi.png" alt="Luigi" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="princess">
         <img src="Images/Princess Peach.png" alt="Princess" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="princess">
         <img src="Images/Princess Peach.png" alt="Princess" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="toad">
         <img src="Images/Toad.png" alt="Toad" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="toad">
         <img src="Images/Toad.png" alt="Toad" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="mushroom">
         <img src="Images/mushroom.png" alt="mushroom" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="mushroom">
         <img src="Images/mushroom.png" alt="mushroom" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="yoshi">
         <img src="Images/Yoshi.png" alt="Yoshi" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" id="yoshi">
         <img src="Images/Yoshi.png" alt="Yoshi" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
@@ -110,5 +110,8 @@ inspiration:
   </footer>
  
   </div>
+  <audio id="letsaGo">
+    <source src="Audio/mk64_marioletsago.wav" type="audio/wav">
+</audio>
 </body>
 </html>
