Still trying to get over some hurdles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="">
+
     <title>Memory Game</title>
 </head>
 
@@ -107,11 +109,15 @@ inspiration:
         <li>00:00:00</li>
         <li>00:00:00</li>
     </ul>
+    <button id="shuffle">Shuffle</button>
   </footer>
  
   </div>
   <audio id="letsaGo">
     <source src="Audio/mk64_marioletsago.wav" type="audio/wav">
-</audio>
+  </audio>
+  <audio id="congrats">
+    <source src="Audio/mk64_mario_congrats.wav" type="audio/wav">
+  </audio>
 </body>
 </html>
