Final Memory Card for Submission

--- a/index.html
+++ b/index.html
@@ -30,73 +30,75 @@ inspiration:
 -->
 <body>
     <header>Mario Matcher</header>
-   
+  <div id="victory">
+    <p></p>
+  </div> 
 
 <div class="play-area">
     <header class="stop-watch">00:00</header>
     
   <section class="memory-game">
-    <div class="memory-card" id="mario">
+    <div class="memory-card mario">
         <img src="Images/Mario.png" alt="Mario" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="mario">
+    <div class="memory-card mario">
         <img src="Images/Mario.png" alt="Mario" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="bowser">
+    <div class="memory-card bowser">
         <img src="Images/Bowser.png" alt="Bowser" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="bowser">
+    <div class="memory-card bowser">
         <img src="Images/Bowser.png" alt="Bowser" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="goomba">
+    <div class="memory-card goomba">
         <img src="Images/Goomba.png" alt="Goomba" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="goomba">
+    <div class="memory-card goomba">
         <img src="Images/Goomba.png" alt="Goomba" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="luigi">
+    <div class="memory-card luigi">
         <img src="Images/Luigi.png" alt="Luigi" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="luigi">
+    <div class="memory-card luigi">
         <img src="Images/Luigi.png" alt="Luigi" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="princess">
+    <div class="memory-card princess">
         <img src="Images/Princess Peach.png" alt="Princess" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="princess">
+    <div class="memory-card princess">
         <img src="Images/Princess Peach.png" alt="Princess" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="toad">
+    <div class="memory-card toad">
         <img src="Images/Toad.png" alt="Toad" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="toad">
+    <div class="memory-card toad">
         <img src="Images/Toad.png" alt="Toad" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="mushroom">
+    <div class="memory-card mushroom">
         <img src="Images/mushroom.png" alt="mushroom" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="mushroom">
+    <div class="memory-card mushroom">
         <img src="Images/mushroom.png" alt="mushroom" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="yoshi">
+    <div class="memory-card yoshi">
         <img src="Images/Yoshi.png" alt="Yoshi" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
-    <div class="memory-card" id="yoshi">
+    <div class="memory-card yoshi">
         <img src="Images/Yoshi.png" alt="Yoshi" class="front-face">
         <img src="Images/SuperMario.png" alt="SuperMario" class="back-face">
     </div>
@@ -109,7 +111,7 @@ inspiration:
         <li>00:00:00</li>
         <li>00:00:00</li>
     </ul>
-    <button id="shuffle">Shuffle</button>
+    <!-- <button id="shuffle">Shuffle</button> -->
   </footer>
  
   </div>
